--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>TOVO</title>
-    <link rel='shortcut icon' type='image/x-icon' href ='//logo.clearbit.com/highradius.com'/>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <script type='text/javascript' src='SIPml-api.js'></script>
+    <base href="tovo-server/tovo" />
+    <link rel='shortcut icon' type='image/x-icon' href ='//logo.clearbit.com/highradius.com'/>
+
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script>
     <style>
+        
+
         body {
         	background-color: #333333 ;
             font-family : "Roboto";
-            font-size: "1vh"
+            font-size: "1vh";
+            line-height: "1em";
         }
     </style>
 </head>
