--- a/index.html
+++ b/index.html
@@ -8,9 +8,37 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='//logo.clearbit.com/highradius.com' />
-
-    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script>
+    <script type="text/javascript" src="/tovo/static/SIPml-api.js"></script>
+    <script type="text/javascript" src="/tovo/static/RecordRTC.js"></script>
+    <!-- <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script> -->
     <style>
+        .example-enter {
+            opacity: 0.01;
+        }
+
+        .example-appear {
+            opacity: 0.01;
+        }
+
+        .example-appear.example-appear-active {
+            opacity: 1;
+            transition: opacity .5s ease-in-out;
+        }
+
+        .example-enter.example-enter-active {
+            opacity: 1;
+            transition: opacity 500ms ease-in-out;
+        }
+
+        .example-leave {
+            opacity: 1;
+        }
+
+        .example-leave.example-leave-active {
+            opacity: 0.01;
+            transition: opacity 300ms ease-in;
+        }
+
         div::-webkit-scrollbar {
             width: 6px;
             background-color: #F5F5F5;
@@ -22,6 +50,13 @@
             background-color: #F5F5F5;
         }
 
+        /* div {
+            font-size: 16px
+        }
+        span {
+            font-size: 16px
+
+        } */
 
         div::-webkit-scrollbar-thumb {
             background-color: #000000;
@@ -32,13 +67,13 @@
             background: #7FDBFF;
         } */
 
-        body {
+        body {  
             background-color: #333333;
             font-family: "Roboto";
-            font-size: "1vh";
+            font-size: "50%";
             line-height: "1em";
         }
-      
+
         .material-icons {
             font-family: 'Material Icons';
             font-weight: normal;
@@ -73,7 +108,7 @@
     <div id="root"></div>
 
     <!-- credits -->
-
+    <audio id="ringtone" loop src="../src/assets/ringtone.mp3"> </audio>
 <script type="text/javascript" src="/bundle.js"></script></body>
 
 </html>
