--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='//logo.clearbit.com/highradius.com' />
-    <script type="text/javascript" src="/tovo/static/SIPml-api.js"></script>
-    <script type="text/javascript" src="/tovo/static/RecordRTC.js"></script>
-    <!-- <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script> -->
+     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script> 
     <style>
         .example-enter {
             opacity: 0.01;
