--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='//logo.clearbit.com/highradius.com' />
-     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script> 
+    <!-- <script type="text/javascript" src="/tovo/static/SIPml-api.js"></script>
+    <script type="text/javascript" src="/tovo/static/RecordRTC.js"></script> -->
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script>
     <style>
         .example-enter {
             opacity: 0.01;
@@ -48,13 +50,13 @@
             background-color: #F5F5F5;
         }
 
-        /* div {
-            font-size: 16px
+        div {
+            font-size: 18px
         }
         span {
-            font-size: 16px
+            font-size: 18px
 
-        } */
+        }
 
         div::-webkit-scrollbar-thumb {
             background-color: #000000;
@@ -66,7 +68,7 @@
         } */
 
         body {  
-            background-color: #333333;
+            background-color: #58687E;
             font-family: "Roboto";
             font-size: "50%";
             line-height: "1em";
@@ -106,7 +108,7 @@
     <div id="root"></div>
 
     <!-- credits -->
-    <audio id="ringtone" loop src="../src/assets/ringtone.mp3"> </audio>
+    <audio id="ringtone" loop src="./ringtone.mp3"> </audio>
 <script type="text/javascript" src="/bundle.js"></script></body>
 
 </html>
