--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         }
         span {
             font-size: 18px
-
+        }
+        
+        p {
+            font-size:  18px
         }
 
         div::-webkit-scrollbar-thumb {
@@ -72,6 +75,7 @@
             font-family: "Roboto";
             font-size: "50%";
             line-height: "1em";
+            margin : 0;
         }
 
         .material-icons {
