--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         p {
             font-size: calc(0.75vh + 0.75vw)
         }
-        
+        html 
+        {
+            font-size: calc(0.75vh + 0.75vw)
+        }
        
 
         div::-webkit-scrollbar-thumb {
