--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='//logo.clearbit.com/highradius.com' />
-    <!-- <script type="text/javascript" src="/tovo/static/SIPml-api.js"></script>
-    <script type="text/javascript" src="/tovo/static/RecordRTC.js"></script> -->
+    <!-- <script type="text/javascript" src="/tovo/static/SIPml-api.js"></script> -->
+    <script type="text/javascript" src="/tovo/static/RecordRTC.js"></script>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/sipml@2.1.4/SIPml-api.js'></script>
     <style>
         .example-enter {
@@ -62,7 +62,9 @@
         }
         html 
         {
-            font-size: calc(0.75vh + 0.75vw)
+            font-size: calc(0.75vh + 0.75vw);
+            background-image: radial-gradient(#58687E, #39495E);
+
         }
        
 
@@ -76,7 +78,7 @@
         } */
 
         body {  
-            background-image: radial-gradient(#58687E, #39495E);;
+            /* background-image: radial-gradient(#58687E, #39495E);; */
             font-family: "Roboto";
             font-size: "50%";
             line-height: "1em";
