--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
         div::-webkit-scrollbar {
             width: 6px;
-            background-color: #F5F5F5;
+            background-color : transparent;
         }
 
 
         div::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-            background-color: #F5F5F5;
+            -webkit-box-shadow: inset 0 0 6px #5DAAE0;
+            background-color: transparent;
         }
 
         div {
@@ -69,7 +69,7 @@
        
 
         div::-webkit-scrollbar-thumb {
-            background-color: #000000;
+            background-color: #5DAAE0;
         }
 
 
