--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         html 
         {
             font-size: calc(0.75vh + 0.75vw);
-            background-image: radial-gradient(#58687E, #39495E);
+            background-color: #46566B;
 
         }
        
